# kurikone-cb-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile-uv  README.md  config.py  database.py  dependency.py  docker-compose.yml  entrypoint.sh  enums.py  globals.py  locales.py  logger.py  main.py  models.py  pyproject.toml  repository.py  requirements.txt  services.py  transactional.py  ui.py  utils.py
cogs/: base_cog.py  clan_battle.py  help.py  setup.py
documents/archive/: locales.py
documents/db_script/: master-data.sql  schema.sql
documents/docs/: Purikone CB Bot Rev 2.drawio  Purikone CB Bot.drawio
locales/: en-US.yaml  en-us.yaml  ja.yaml
test/: conftest.py
test/unit/: test_config.py  test_database.py  test_enum.py  test_locale.py  test_logger.py  test_main.py  test_models.py  test_repository.py  test_transactional.py  test_utils.py
