[project]
name = "kurikone-cb-bot"
version = "0.1.0"
description = "Princess Connect Discord CB Bot"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "dbutils>=3.1.0",
    "discord-py>=2.5.2",
    "envier>=0.6.1",
    "i18nice[yaml]>=0.15.5",
    "mariadb>=1.1.12",
    "python-dotenv>=1.1.0",
]
